# Sentinel

./: CMakeLists.txt  Makefile  README.md  TODO.md  build.sh  mingw-toolchain.cmake
src/: bench.cpp  bit_ops.cpp  bit_ops.h  bitboard.cpp  bitboard.h  board.cpp  board.h  boardEnums.h  consts.h  development.h  evaluation.cpp  history.h  magics.cpp  magics.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  movepick.cpp  movepick.h  nodetype.h  pst.h  search.h  searchstack.h  see.cpp  state.h  timemanager.cpp  timemanager.h  timer.cpp  timer.h  tt.cpp  tt.h  tunable.cpp  tunable.h  tunables.h  uci.cpp  uci.h  zobrist.h
src/nnue/: accumulator.cpp  accumulator.h  bin2header  const.h  datagen.cpp  datagen.h  net.h  neuralnetwork.cpp  neuralnetwork.h  nnue.cpp  nnue.h  simd.h  singularity.bin.h  singularity_v2_4_40.bin.hpp
src/tests/: BoardTests.cpp  NNUETests.cpp  NullMoveTests.cpp  PerftTests.cpp  SEETests.cpp  TestRunner.cpp  ZobristTests.cpp  boardTests.cpp  boardtests.h  nullMoveTests.cpp  nullmovetests.h  perftTests.cpp  perfttests.h  seetests.h  testrunner.h  zobristTests.cpp  zobristtests.h
